# euRobotics_orocos_ws

./: .gitmodules  README  euRobotics_orocos_ws.rosinstall  stack.xml
calculateDistanceToWall/: CMakeLists.txt  manifest.xml  orocos-calculateDistanceToWall.pc.in
extendedKalmanFilterComponentRobot/: CMakeLists.txt  deploy.ops  findPoseLaser.launch  manifest.xml  runekf.sh
remote_simulation/: gazebo_simulation.launch  gazebo_simulation.sh  manifest.xml  morseSimulationRemote.ops
youbot_controller/: CMakeLists.txt  controller.launch  controller.ops  controller.yaml  deploy.ops  manifest.xml  orocos-youbot_controller.pc.in  runController.sh
youbot_controller/cpf/: controller.cpf  controllerMorse.cpf
youbot_controller/src/: controller.cpp  controller.hpp
youbot_simulator/: CMakeLists.txt  deploy.ops  manifest.xml  orocos-youbot_simulator.pc.in  runSimulator.sh  simulator.launch  simulator.ops  simulator.yaml
youbot_simulator/cpf/: simulator.cpf
youbot_simulator/src/: nonlinearanalyticconditionalgaussianmobile.cpp  nonlinearanalyticconditionalgaussianmobile.h  simulator.cpp  simulator.hpp  youbotLaserPdf.cpp  youbotLaserPdf.h
youbot_supervisor/: changePathKst  deploy.ops  findPoseLaser.launch  manifest.xml  morseSimulation.ops  morseSimulation.sh  morseSimulationRemote.ops  morse_simulation.launch  plot.kst  plotMorseSimulation.kst  plotRealRobot.kst  plotRemoteSimulation.kst  plotSimulation.kst  realRobot.ops  realRobot.sh  remoteSimulation.ops  remoteSimulation.sh  run.lua  runApp.sh  simulation.launch  simulation.ops  simulation.sh  statemachine.lua  (+3 more)
(+20 files in other folders)
